# opengl-raytracing

./: .gitignore  CMakeLists.txt  Color.h  Object.h  README.md  Vector3d.cpp  Vector3d.h  helloworld.java  heloo.cpp  heloo.h  main.cpp  plane.h  sphere.cpp
entity/: Ray.h  sphere.h
src/entity/: Light.h  plane.cpp
